fix: dialog resize handle alignment [ci visual] (#2773)

--- a/src/dialog.scss
+++ b/src/dialog.scss
@@ -159,15 +159,15 @@ $button: #{$fd-namespace}-button;
     @include fd-reset();
 
     position: absolute;
-    right: 0;
-    bottom: -4px;
+    right: 1px;
+    bottom: -5px;
     font-size: 1rem;
     cursor: se-resize;
     overflow: hidden;
 
     @include fd-rtl() {
       right: unset;
-      left: 0;
+      left: 1px;
       cursor: sw-resize;
       transform: scaleX(-1);
     }
